--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>天时勤务系统</title>
+	<style type="text/css">
+		.list_red{
+		corlor:red;!important;
+	}
+</style>
     <script id="microloader" type="text/javascript" src="microloader/development.js"></script>
 </head>
 <body>
