--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
 		corlor:red;!important;
 	}
 </style>
+
+<style type="text/css">
+    .fieldset_nb{border:0px}/**无边框**/
+  </style>
     <script id="microloader" type="text/javascript" src="microloader/development.js"></script>
 </head>
 <body>
