--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 
 <style type="text/css">
     .fieldset_nb{border:0px}/**无边框**/
+	.div_min{background-color:red}/**小于时间提醒**/
+	.div_max{background-color:#cc6600}/**大于时间提醒**/
   </style>
     <script id="microloader" type="text/javascript" src="microloader/development.js"></script>
 </head>
